--- a/docs/te/tables/table.tex
+++ b/docs/te/tables/table.tex
@@ -1,32 +1,27 @@
-%--------------------------------------------------------------------------
-\begin{table}[!ht]
+\begin{table}[!h]
 \begin{center}
-\begin{tabular}{|c|c|} \hline 
-\textbf{Tiempo  } & \textbf{Velocidad} \\ 
-\textbf{($\pm$ 0.001 s)} & \textbf{($\pm$ 0.1 m/s)} \\ \hline \hline
-1.234 &
-67.8
-\\
+% \label{Mitabla}
+
+\begin{tabular}{cccc}
+
+Aproximación & Raiz & f(raiz) & Iteraciones necesarias\\
+
 \hline
 
-2.345 &
-78.9
-\\
-\hline
+1 & 1.000 & 0.000 & 1\\
 
-3.456 &
-89.1
-\\
-\hline
+2 & 1.000 & 0.000 & 6\\
 
-4.567 &
-91.2
-\\
-\hline
+3 & 1.000 & 0.000 & 7\\
+
+5 & 1.000 & 0.000 & 8\\
+
+6 & 1.000 & 0.000 & 10\\
+
+7 & 1.000 & 0.000 & 11\\
 
 \end{tabular}
 \end{center}
-\caption{Resultados experimentales de tiempo (s) y velocidad (m/s)}
+\caption{Resultados experimentales}
 \label{tab:1}
-\end{table}
-
+\end{table} 
